[package]
name = "keisteen"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
eyre = "0.6.12"
futures = "0.3.31"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
